# cotrol_utils

./: CMakeLists.txt  README.md
filters/: CMakeLists.txt  butterworthFilter.c
filters/cmake/: filtersConfig.cmake  filtersConfigVersion.cmake
filters/inc/: butterworthFilter.h
filters/src/: butterworthFilter.c
include/: butterworthFilter.h
test/: CMakeLists.txt
test/filters/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  testFilter.c  testFilter.py
